--- a/Code_porject.qmd
+++ b/Code_porject.qmd
@@ -5,3 +5,46 @@ format: html
 editor: visual
 ---
 
+```{r configuration}
+here::i_am("CNC_INSEE_project.Rproj")
+
+library(here)
+library(dplyr)
+library(tidyr)
+library(readxl)
+```
+# Formating of the CNC database
+
+```{r}
+file_path <- "exploitation_données_par_département.xlsx"
+
+cnc_data <- read_excel(file_path, sheet = 4, skip = 5)
+
+cnc_data_long <-  cnc_data |>
+  select(-colnames(cnc_data)[2]) |>
+  rename(departement = colnames(cnc_data)[1]) |>
+  pivot_longer(
+    cols = -departement,
+    names_to = "year", 
+    values_to = excel_sheets(file_path)[4]
+    )
+
+cnc_data_merge <- cnc_data_long
+
+for (i in 5:length(excel_sheets(file_path))) {
+  cnc_data <- read_excel(file_path, sheet = i, skip = 5)
+
+cnc_data_long <-  cnc_data |>
+  select(-colnames(cnc_data)[2]) |>
+  rename(departement = colnames(cnc_data)[1]) |>
+  pivot_longer(
+    cols = -departement,
+    names_to = "year", 
+    values_to = excel_sheets(file_path)[i]
+    )
+
+cnc_data_merge <- left_join(cnc_data_merge, cnc_data_long, by = c("departement", "year"))
+}
+
+```
+
